overflow fixed

--- a/desarrollo/modal.css
+++ b/desarrollo/modal.css
@@ -6,6 +6,7 @@
     left: 0;
     background-color: rgba(0, 0, 0, .4);
     z-index: 9999;
+    overflow: scroll;
 }
 .Modal-content {
     position: absolute;
